# patchcord

./: .gitignore  Cargo.toml  README.md  build-rs.sh  build.ts  package.json  tsconfig.json
node/: index.ts  patchcord.d.ts  patchcord.js
node/test/: client.test.mjs  log.mjs  mock-helper.mjs
src/: logger.rs  main.rs  patchbay.rs
src/patchbay/: cmd.rs  error.rs  mod.rs  models.rs  routing.rs  snapshot.rs  state.rs
